--- a/calendrier.html
+++ b/calendrier.html
@@ -6689,6 +6689,7 @@
             delete champsModifies["recurrence_id"];
             delete champsModifies["Travail"];
             delete champsModifies["Pointage"];
+            delete champsModifies["Lieu"];
 
             const colonnesAMettreAJour = Object.keys(champsModifies);
 
