--- a/calendrier.html
+++ b/calendrier.html
@@ -22,7 +22,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.2/jspdf.plugin.autotable.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.2/jspdf.plugin.autotable.min.js"></script>
-    <script type="text/javascript">
+    <script type="module">
+        import { supabase } from './supabaseClientAgendaJour.js';
+
         // Place ta fonction `openEditModal` ici
         async function openEditModal(date, notes = "") {
 
